Small design fix on mobile

--- a/styles/mk-online.css
+++ b/styles/mk-online.css
@@ -75,6 +75,7 @@
         left: 0px;
         top: 100%;
         width: 98%;
+        margin-top: 80px;
 	}
 }
 .online-chat-blockdialog {
